fix movie details alignment

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
   font-family: 'Libre Franklin', sans-serif;
 }
 
+h2 {
+  font-weight: 800;
+}
+
 .header {
   background-color: rgb(71, 65, 65) !important;
   color: white;
@@ -60,8 +64,10 @@
 }
 
 .rating-image {
-  width: 50px;
-  height: 20px;
+  max-width: 2rem;
+  max-height: 2rem;
+  width: auto;
+  height: auto;
 }
 
 .watchlist {
@@ -72,7 +78,8 @@
 
 .movie-poster {
   padding-top: 2rem;
-  width: 15rem;
+  margin-left: 2rem;
+
 }
 
 .plot-section {
@@ -88,7 +95,7 @@
 }
 
 .movie-details-section {
-  padding-top: 8rem;
+  padding-left: 2rem;
 }
 
 .first-rating {
@@ -97,4 +104,16 @@
 
 .third-rating {
   border-left: 1px solid #666666;
+}
+
+@media (max-width: 1200px) {
+  .movie-poster {
+    display: none;
+  }
+}
+
+@media (max-width: 900px) {
+  .movie-list-thumbnail{
+    display: none;
+  }
 }
